--- a/docker/wp-base/Dockerfile
+++ b/docker/wp-base/Dockerfile
@@ -16,7 +16,9 @@ RUN apt-get -qy update && \
 RUN set -e -x; add-apt-repository ppa:savoury1/backports; \
   apt-get -qy update; apt-get -qy install curl
 
-RUN curl -sL https://deb.nodesource.com/setup_${NODE_VERSION_MAJOR}.x | bash -
+RUN mkdir -p /etc/apt/keyrings
+RUN curl -fsSL https://deb.nodesource.com/gpgkey/nodesource-repo.gpg.key | gpg --dearmor -o /etc/apt/keyrings/nodesource.gpg
+RUN echo "deb [signed-by=/etc/apt/keyrings/nodesource.gpg] https://deb.nodesource.com/node_$NODE_VERSION_MAJOR.x nodistro main" > /etc/apt/sources.list.d/nodesource.list
 
 RUN apt-get -qy update && apt-get  -qy install --no-install-recommends \
     bash-completion \
