[fix] `wp-gutenberg-epfl`: revert to mainline branches
Now that https://github.com/epfl-si/wp-gutenberg-epfl/pull/386 and https://github.com/epfl-si/wp-gutenberg-epfl/pull/387 are merged (and https://github.com/epfl-si/wp-gutenberg-epfl/commit/40c7b2a998eb42cda7a08657f08aac88d7039e9d is commited to master), the temporary branches are no longer necessary

--- a/ansible/roles/wordpress-instance/tasks/plugins.yml
+++ b/ansible/roles/wordpress-instance/tasks/plugins.yml
@@ -377,7 +377,7 @@
       - symlinked
       - active
     from: https://github.com/epfl-si/wp-gutenberg-epfl
-    branch: static/5.5-node20
+    branch: static/5.5
 
 - name: EPFL Gutenberg plugin
   when: wp_version_lineage is version('5.6', '>=')
@@ -389,7 +389,7 @@
       - symlinked
       - active
     from: https://github.com/epfl-si/wp-gutenberg-epfl
-    branch: upgrade/node-20.x
+    branch: master
 
 - name: EPFL Menus plugin
   wordpress_plugin:
