[fix] `readinessProbe` → `livenessProbe`
This should put a band-aid on today's outage (17:56 CET, also [INF-11266](https://jira.camptocamp.com/servicedesk/customer/portal/5/INF-11266)

--- a/ansible/roles/wordpress-openshift-namespace/tasks/k8s-objects-httpd.yml
+++ b/ansible/roles/wordpress-openshift-namespace/tasks/k8s-objects-httpd.yml
@@ -92,7 +92,7 @@
               protocol: TCP
             - containerPort: 9980
               protocol: TCP
-            readinessProbe:
+            livenessProbe:
               failureThreshold: 3
               httpGet:
                 path: /ready
