[doc] Clarify which S3 credentials are the same
Pro memoria, the use cases are as follows:

- for `wwp-test`, to be able to restore from prod to test (⇒ read-only credentials suffice)
- for `wwp`, so that the operator can perform manual backups using `wpsible -t wp.backup`
- for `wwp-infra`, for automated backups driven by AWX

--- a/ansible/vars/secrets-wwp-test.yml
+++ b/ansible/vars/secrets-wwp-test.yml
@@ -32,8 +32,9 @@ s3_backup:
 
 # wwp-test is hereby granted authority to restore from production.
 # These credentials must be kept identical to the corresponding subset
-# of s3_backup in secrets-wwp.yml (although they are encrypted under a
-# different key pair, so they won't look identical in your editor)
+# of s3_backup in secrets-wwp.yml and secrets-wwp-infra.yml (although
+# they are encrypted under a different key pair, so they won't look
+# identical in your editor)
 s3_backup_prod:
   endpoint_url: https://s3.epfl.ch
   bucket_name: svc0041-df3298778888f91b2b62cf913f4c8c74
