[feature] `-t awx.k8s.secrets`
... You see, umm, we haven't applied `-t awx` for a long time, because [that would break logging in AWX](https://github.com/ansible/awx/issues/11338#issuecomment-1621475455) 🤦

--- a/ansible/roles/awx-instance/tasks/main.yml
+++ b/ansible/roles/awx-instance/tasks/main.yml
@@ -53,11 +53,18 @@
   # `-t images.promote`)
 
 - name: "Ansible Tower OpenShift objects"
-  import_tasks: k8s.yml
-  delegate_to: localhost
+  include_tasks:
+    file: k8s.yml
+    apply:
+      delegate_to: localhost
+      tags:
+        - awx
+        - awx.k8s
+        - awx.openshift
   tags:
     - awx
     - awx.k8s
+    - awx.k8s.secrets
     - awx.openshift
 
 - name: "Ansible Tower database operations"
