--- a/ansible/roles/wordpress-openshift-namespace/tasks/menu-api.yml
+++ b/ansible/roles/wordpress-openshift-namespace/tasks/menu-api.yml
@@ -20,9 +20,7 @@
       namespace: "{{ openshift_namespace }}"
     data:
       menu-api-config.yaml: |
-        OPENSHIFT_ENV: |
-          - "www"
-          - "labs"
+        OPENSHIFT_ENV: {{ _openshift_environment }}
         WPVERITAS_URL: "https://{{ _wp_veritas_base_url }}/api/v1/sites"
         MENU_API_PROTOCOL_HOST_PORT: "https://www.epfl.ch"
         SERVICE_PORT: "3001"
@@ -70,6 +68,9 @@
     _wp_veritas_base_url: >-
       {{ "wp-veritas.epfl.ch" if openshift_namespace == "wwp"
       else "wp-veritas-test.epfl.ch" }}
+    _openshift_environment: >-
+      {{ "www\nlabs" if openshift_namespace == "wwp"
+      else "int" }}
 
 - name: Menu and breadcrumb API DeploymentConfig
   openshift:
