--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -11,3 +11,4 @@ callback_whitelist = timer, profile_tasks
 ;; default is 5
 forks = 5
 strategy_plugins = ansible-deps-cache/python/lib/python3.7/site-packages/ansible_mitogen/plugins/strategy
+nocows = true
