--- a/ansible/roles/wordpress-openshift-namespace/vars/mgmt-vars.yml
+++ b/ansible/roles/wordpress-openshift-namespace/vars/mgmt-vars.yml
@@ -23,6 +23,7 @@ _mgmt_access_list_wwp_test_and_wwp:
   - sami.panseri@epfl.ch
   - gregory.daguerre@epfl.ch
   - rosa.maggi@epfl.ch
+  - ehouarn.duriaux@epfl.ch
 
 _mgmt_access_list_wwp_test_only: []
 
