fix: Set a fixed version of Polylang, the last known to work with WP 6.1

--- a/ansible/roles/wordpress-instance/tasks/plugins.yml
+++ b/ansible/roles/wordpress-instance/tasks/plugins.yml
@@ -263,7 +263,7 @@
     state:
       - symlinked
       - active
-    from: wordpress.org/plugins
+    from: https://downloads.wordpress.org/plugin/polylang.3.5.4.zip
 
 - name: Count Polylang languages
   shell: |
