feat: Add report about infoscience-search block

--- a/ansible/roles/wordpress-instance/tasks/main.yml
+++ b/ansible/roles/wordpress-instance/tasks/main.yml
@@ -237,4 +237,5 @@
     - never
     - wp.reports
     - wp.reports.options
-    - wp.reports.search_content
+    - wp.reports.search_content.isa_content
+    - wp.reports.search_content.infoscience_block
