fix: Set a fixed version of ewww, the last known to work with WP 6.1

--- a/ansible/roles/wordpress-instance/tasks/plugins.yml
+++ b/ansible/roles/wordpress-instance/tasks/plugins.yml
@@ -439,7 +439,7 @@
     state:
       - symlinked
       - active
-    from: wordpress.org/plugins
+    from: https://downloads.wordpress.org/plugin/ewww-image-optimizer.7.5.0.zip
   register: _plugin_ewww
 
 - name: ewww-image-optimizer plugin
