--- a/ansible/roles/wordpress-openshift-namespace/vars/main.yml
+++ b/ansible/roles/wordpress-openshift-namespace/vars/main.yml
@@ -5,3 +5,9 @@ openshift_is_production: "{{ openshift_namespace == 'wwp' }}"
 openshift_registry_tag: "{{ 'prod' if openshift_is_production else 'latest' }}"
 
 wwp_build_namespace: wwp-test
+
+nodejs_base_image_name: node
+nodejs_base_image_tag: 20-alpine
+nodejs_base_image: "{{ nodejs_base_image_name }}:{{ nodejs_base_image_tag }}"
+nodejs_base_image_mirrored_from: "docker.io/{{ nodejs_base_image }}"
+nodejs_base_image_mirrored_to: "docker-registry.default.svc:5000/wwp-test/{{ nodejs_base_image }}"
