[Fix] Add prod environment

--- a/ansible/roles/wordpress-openshift-namespace/tasks/menu-api.yml
+++ b/ansible/roles/wordpress-openshift-namespace/tasks/menu-api.yml
@@ -118,6 +118,7 @@
     _subpath: "{{ _subpaths[openshift_namespace] }}"
     _subpaths:
       wwp-test: .
+      wwp: .
 
 - name: Menu and breadcrumb API Service
   openshift:
