--- a/ansible/roles/wordpress-openshift-namespace/tasks/menu-api.yml
+++ b/ansible/roles/wordpress-openshift-namespace/tasks/menu-api.yml
@@ -67,7 +67,9 @@
       {{ "wp-veritas.epfl.ch" if openshift_namespace == "wwp"
       else "wp-veritas-test.epfl.ch" }}
     _openshift_environment: >-
-      {{ "www\nlabs" if openshift_namespace == "wwp"
+      {{ "|
+            www
+            labs" if openshift_namespace == "wwp"
       else "int" }}
 
 - name: Menu and breadcrumb API DeploymentConfig
