--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -4,18 +4,18 @@ daemon off;
 events {}
 
 http {
-     include /etc/nginx/mime.types;
-     default_type application/octet-stream;
+    include /etc/nginx/mime.types;
+    default_type application/octet-stream;
 
-     absolute_redirect off;
-     server {
+    absolute_redirect off;
+    server {
         listen 8080;
         listen 8443 ssl;
         access_log /dev/stdout;
-        error_log /dev/stderr;
+        error_log  /dev/stderr;
 
-        ssl_certificate    /etc/nginx/ssl/server.cert;
-        ssl_certificate_key    /etc/nginx/ssl/server.key;
+        ssl_certificate     /etc/nginx/ssl/server.cert;
+        ssl_certificate_key /etc/nginx/ssl/server.key;
 
         root /wp-data/$host/htdocs;  # Where /wp-data is mounted anywhere, as decided by Kubernetes
 
@@ -26,42 +26,42 @@ http {
         # fastcgi_param directives will have bo effect.
         fastcgi_param SCRIPT_FILENAME /wp/nginx-entrypoint.php;
 
-        fastcgi_param  QUERY_STRING       $query_string;
-        fastcgi_param  REQUEST_METHOD     $request_method;
-        fastcgi_param  REQUEST_SCHEME     $scheme;
-        fastcgi_param  CONTENT_TYPE       $content_type;
-        fastcgi_param  CONTENT_LENGTH     $content_length;
+        fastcgi_param QUERY_STRING       $query_string;
+        fastcgi_param REQUEST_METHOD     $request_method;
+        fastcgi_param REQUEST_SCHEME     $scheme;
+        fastcgi_param CONTENT_TYPE       $content_type;
+        fastcgi_param CONTENT_LENGTH     $content_length;
 
-        fastcgi_param  REQUEST_URI        $request_uri;
-        fastcgi_param  DOCUMENT_URI       $document_uri;
-        fastcgi_param  SERVER_PROTOCOL    $server_protocol;
-        fastcgi_param  HTTPS              $https if_not_empty;
+        fastcgi_param REQUEST_URI        $request_uri;
+        fastcgi_param DOCUMENT_URI       $document_uri;
+        fastcgi_param SERVER_PROTOCOL    $server_protocol;
+        fastcgi_param HTTPS              $https if_not_empty;
 
-        fastcgi_param  SERVER_SOFTWARE    nginx/$nginx_version;
+        fastcgi_param SERVER_SOFTWARE    nginx/$nginx_version;
 
-        fastcgi_param  REMOTE_ADDR        $remote_addr;
-        fastcgi_param  REMOTE_PORT        $remote_port;
-        fastcgi_param  SERVER_ADDR        $server_addr;
-        fastcgi_param  SERVER_PORT        $server_port;
-        fastcgi_param  SERVER_NAME        $server_name;
+        fastcgi_param REMOTE_ADDR        $remote_addr;
+        fastcgi_param REMOTE_PORT        $remote_port;
+        fastcgi_param SERVER_ADDR        $server_addr;
+        fastcgi_param SERVER_PORT        $server_port;
+        fastcgi_param SERVER_NAME        $server_name;
 
-        fastcgi_param  WP_ENV             www;
+        fastcgi_param WP_ENV             test;
 
         # PHP only, required if PHP was built with --enable-force-cgi-redirect
-        fastcgi_param  REDIRECT_STATUS    200;
-        fastcgi_param HTTP_PROXY '';
+        fastcgi_param REDIRECT_STATUS 200;
+        fastcgi_param HTTP_PROXY      '';
 
         # PHP queries are those with no dot in them, or those that end with
         # .php:
         location ~ ^[^.]*$ {
-               fastcgi_pass unix:/run/php-fpm.sock;
+            fastcgi_pass unix:/run/php-fpm.sock;
         }
         location ~ \.php$ {
-               fastcgi_pass unix:/run/php-fpm.sock;
+            fastcgi_pass unix:/run/php-fpm.sock;
         }
 
         location ~ /\.ht {
-                deny all;
+            deny all;
         }
-     }
+    }
 }
