--- a/docker/nginx/php.ini
+++ b/docker/nginx/php.ini
@@ -10,3 +10,7 @@ opcache.revalidate_path = 1
 
 ;; Define the default sender as "noreply@epfl.ch" to bypass SMTP authentication
 sendmail_from = "noreply@epfl.ch"
+
+;; https://www.php.net/manual/en/errorfunc.configuration.php#ini.log-errors-max-len
+;; https://serverfault.com/questions/256459/nginx-php-fpm-long-log-lines-get-truncated
+log_errors_max_len = 4096
