[fix] More nginx logs

--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -12,7 +12,7 @@ http {
         listen 8080;
         listen 8443 ssl;
         access_log /dev/stdout;
-        error_log  /dev/stderr;
+        error_log /dev/stderr warn; # https://docs.nginx.com/nginx/admin-guide/monitoring/logging/
 
         ssl_certificate     /etc/nginx/ssl/server.cert;
         ssl_certificate_key /etc/nginx/ssl/server.key;
