[feature] CronJob to refresh the Menu's API's cache
Use
- `oc get cronjob -n wwp -o wide` to get the cronjob list
- `oc get pods -n wwp -o wide | grep menu-api-refresh` to get the name 
of the pod of the last run
- `oc logs menu-api-refresh-cron-1234567890-abcd3 -n wwp` to have the 
logs

--- a/ansible/roles/wordpress-openshift-namespace/tasks/main.yml
+++ b/ansible/roles/wordpress-openshift-namespace/tasks/main.yml
@@ -139,6 +139,7 @@
         - menu_api
   tags:
     - menu_api
+    - menu_api.cronjob
     - menu_api.is
 
 # A reminder that monitoring pod on wwp is expecting a pushgateway on wwp-infra
