--- a/ansible/roles/wordpress-openshift-namespace/tasks/menu-api.yml
+++ b/ansible/roles/wordpress-openshift-namespace/tasks/menu-api.yml
@@ -137,3 +137,30 @@
           targetPort: 3001
       selector:
         deployment-config.name: menu-api-siblings
+
+# CronJob to refresh the Menu's API cache on a regular basis
+- name: "Installing Menu's API refreshing cronjob"
+  openshift:
+    apiVersion: batch/v1beta1
+    kind: CronJob
+    metadata:
+      name: menu-api-refresh-cron
+      namespace: "{{ openshift_namespace }}"
+    spec:
+      schedule: "*/10 * * * *" # Every 10 minutes, mind the CloudFlare cache
+      concurrencyPolicy: "Forbid" # Do not start a new cron if the previous one is still running
+      jobTemplate:
+        spec:
+          template:
+            spec:
+              containers:
+              - name: menu-api-refresh
+                image: "curlimages/curl:8.9.1"
+                imagePullPolicy: IfNotPresent
+                args:
+                  - /bin/sh
+                  - -ec
+                  - 'curl "http://menu-api-siblings:3001/refresh"'
+              restartPolicy: Never
+  tags:
+    - menu_api.cronjob
