[Fix] rebuild image when source code changed or with tag, redeploy pods when config map change or with tag

--- a/ansible/roles/wordpress-openshift-namespace/tasks/main.yml
+++ b/ansible/roles/wordpress-openshift-namespace/tasks/main.yml
@@ -141,6 +141,8 @@
     - menu_api
     - menu_api.cronjob
     - menu_api.is
+    - menu_api.rebuild
+    - menu_api.redeploy
 
 # A reminder that monitoring pod on wwp is expecting a pushgateway on wwp-infra
 - debug:
